fix: footer spacing

--- a/Components/NavigationFooter/_style.scss
+++ b/Components/NavigationFooter/_style.scss
@@ -2,6 +2,10 @@
   min-height: 0;
   padding: 2rem 0;
 
+  @media (max-width: $breakpoint-tablet) {
+    padding: 3rem 0;
+  }
+
   .content {
     @include row;
     align-items: center;
@@ -14,7 +18,7 @@
     width: 4rem;
 
     @media (max-width: $breakpoint-tablet) {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     img {
