--- a/Components/NavigationMain/_style.scss
+++ b/Components/NavigationMain/_style.scss
@@ -106,96 +106,6 @@
     padding-left: 0;
   }
 
-  .nav {
-    &-links {
-      column-gap: 5rem;
-      display: flex;
-
-      @media (max-width: $breakpoint-tablet-horizontal) {
-        flex-basis: 100%;
-        flex-direction: column;
-        max-width: 100%;
-      }
-    }
-    
-    &-link {
-      padding: 2.8rem 0;
-
-      @media (min-width: $breakpoint-tablet-horizontal) {
-        padding: 5rem 0;
-      }
-
-      @media (max-width: $breakpoint-tablet-horizontal) {
-        align-items: center;
-        border-bottom: 0.1rem solid $light-grey;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        position: relative;
-      }
-
-      >a {
-        color: $white;
-        font-weight: 700;
-        position: relative;
-
-        &::after {
-          background-color: $pink;
-          bottom: -222%;
-          content: '';
-          height: 0.8rem;
-          left: 0;
-          position: absolute;
-          transition: width 0.3s ease-in-out;
-          width: 0;
-          z-index: 21;
-        }
-      }
-
-      &:hover {
-        >a {
-          &::after {
-            @media (min-width: $breakpoint-tablet-horizontal) {
-              width: 100%;
-            }
-          }
-        }
-
-        .megamenu {
-          &__dropdown {
-            @media (min-width: $breakpoint-tablet-horizontal) {
-              overflow: visible;
-              transform: scaleY(1);
-            }
-          }
-
-          > .container {
-            @media (min-width: $breakpoint-tablet-horizontal) {
-              opacity: 1;
-            }
-          }
-        } 
-      }
-    }
-    
-    &-cta {
-      margin-top: 4rem;
-
-      @media (min-width: $breakpoint-tablet-horizontal) {
-        margin-top: 0;
-        padding-left: 5rem;
-      }
-    }
-
-    &-link--active {
-      .expand-btn {
-        &::after {
-          opacity: 0;
-        }
-      }
-    }
-  }
-
   .megamenu {
     display: none;
 
